--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "start_url": "./",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "img/icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
